--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.9",
@@ -18,14 +19,19 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-toastify": "^9.0.7",
     "tailwindcss": "^3.1.4"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.6",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.0",
-    "typescript": "4.7.4"
+    "jest": "^28.1.3",
+    "jest-junit": "^14.0.0",
+    "ts-jest": "^28.0.7",
+    "typescript": "^4.7.4"
   }
 }
